Fix composited bundles layout issues
ref #905

--- a/assets/css/woocommerce/extensions/composite-products.scss
+++ b/assets/css/woocommerce/extensions/composite-products.scss
@@ -125,11 +125,9 @@
 			}
 
 			.composited_product_images {
-				margin-left: 0;
-			}
 
-			.composited_product_images,
-			.images {
+				margin-left: 0;
+
 				@include span(3 of 12);
 
 				a {
@@ -196,8 +194,7 @@
 
 		.component_selections {
 			.component_summary {
-				.composited_product_images,
-				.images {
+				.composited_product_images {
 					@include span(3 of 12);
 
 					a {
@@ -226,8 +223,7 @@
 
 		.component_selections {
 			.component_summary {
-				.composited_product_images,
-				.images {
+				.composited_product_images {
 					@include span(3 of 12);
 
 					a {
@@ -253,8 +249,7 @@
 
 			.component_selections {
 				.component_summary {
-					.composited_product_images,
-					.images {
+					.composited_product_images {
 						@include span(3 of 12);
 
 						a {
